--- a/template.css
+++ b/template.css
@@ -1,7 +1,27 @@
-li {
+ul {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+li {
+    float: left;
 }
-
-nav {
+  
+li a {
     display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: large;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+  
+li a:hover {
+    background-color: goldenrod;
+    color: black;
 }
