outline the divs

--- a/global.css
+++ b/global.css
@@ -43,3 +43,9 @@ img {
     height: 256px;
     width: 256px;
 }
+
+div {
+    border-style: outset;
+    border-color: goldenrod;
+    border-width: medium;
+}
