--- a/global.css
+++ b/global.css
@@ -48,4 +48,6 @@ div {
     border-style: outset;
     border-color: goldenrod;
     border-width: medium;
+    border-radius: 5px;
+    padding: 5px 5px;
 }
