--- a/global.css
+++ b/global.css
@@ -31,7 +31,7 @@ nav {
 }
 
 body {
-    margin: auto;
+    margin: 0;
     font-family: "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", helvetica;
 }
 
