--- a/global.css
+++ b/global.css
@@ -27,15 +27,11 @@
     .nav li a#welcome {
         display: block;
     }
-    div.left {
+    .left {
         width: 100%;
-        float: none;
-        display: block;
     }
-    div.right {
+    .right {
         width: 100%;
-        float: none;
-        display: block;
     }
     .right img {
         height: 50%;
