--- a/global.css
+++ b/global.css
@@ -29,9 +29,11 @@
     }
     .left {
         width: 100%;
+        float: none;
     }
     .right {
         width: 100%;
+        float: none;
     }
     .right img {
         height: 50%;
