--- a/template.css
+++ b/template.css
@@ -122,6 +122,11 @@ body {
     font-size: 20px;
 }
 
+.article {
+    border: #f8ac29 1px solid;
+    border-radius: 5px;
+}
+
 footer {
     margin-top: 8px;
     background-color: #1f2121;
