--- a/about-us/styling.css
+++ b/about-us/styling.css
@@ -8,7 +8,47 @@
     justify-content: center;
 }
 
-.person {
+#yash {
+    display: inline-block;
+    width: 33%;
+    padding: 0 17px;
+    border: solid 1px #f8ac29;
+    margin-bottom: 30px
+}
+
+#pranit {
+    display: inline-block;
+    width: 33%;
+    padding: 0 17px;
+    border: solid 1px #f8ac29;
+    margin-bottom: 30px
+}
+
+#chen {
+    display: inline-block;
+    width: 33%;
+    padding: 0 17px;
+    border: solid 1px #f8ac29;
+    margin-bottom: 30px
+}
+
+#josh {
+    display: inline-block;
+    width: 33%;
+    padding: 0 17px;
+    border: solid 1px #f8ac29;
+    margin-bottom: 30px
+}
+
+#rayhaan {
+    display: inline-block;
+    width: 33%;
+    padding: 0 17px;
+    border: solid 1px #f8ac29;
+    margin-bottom: 30px
+}
+
+#anu {
     display: inline-block;
     width: 33%;
     padding: 0 17px;
@@ -29,4 +69,32 @@
     border-bottom: 0;
     display: block;
     width: 100%;
+}
+
+.drop-button {
+    background-color: #f8ac29;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    font-weight: bold;
+    margin: 5px;
+}
+
+#sorts {
+    display: none;
+}
+
+#filters {
+    display: none;
+}
+
+#searchbar {
+    border-radius: 15px;
+    padding: 10px;
+    font-weight: bold;
+    background-color: #1f2121;
+    color: white;
+    display: inline-block;
+    width: 30%;
+    border: solid 1px #f8ac29
 }
