feat: refine placeholder text in "our work"

--- a/our-work/styling.css
+++ b/our-work/styling.css
@@ -17,3 +17,14 @@
 h3 {
     font-weight:1000;
 }
+
+.para {
+    display: inline-block;
+    width: 75%;
+    float: left;
+}
+.img {
+    display: inline-block;
+    width: 25%;
+    float:right;
+}
