--- a/global/styling.css
+++ b/global/styling.css
@@ -184,12 +184,11 @@ footer {
     width: 100%;
     margin: auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 #sponsors img {
     height: 64px;
-    width: 500px;
 }
 
 .full {
