--- a/contact-us/styling.css
+++ b/contact-us/styling.css
@@ -11,4 +11,7 @@
     padding: 5px 25px;
     border-radius: 25px;
     margin: 5px 25px;
+    display: inline-block;
+    width: 45%;
+    text-align: center;
 }
