feat: update banner

--- a/global/styling.css
+++ b/global/styling.css
@@ -88,7 +88,7 @@ body {
 }
 
 .banner {
-    background-image: url(./l-placeholder.png);
+    background-image: url(./banner.png);
     height: 1080px;
     text-align: center;
     color: #f8ac29;
