--- a/global/styling.css
+++ b/global/styling.css
@@ -21,8 +21,8 @@ body {
 .logo {
     float: left;
     display: block;
-    height: 5.736137667vh;
-    width: 5.736137667vh;
+    height: 5.736vh;
+    width: 3.125vw;
 }
 
 .links {
@@ -33,7 +33,7 @@ body {
     display: inline-block;
     text-align: center;
     padding: 1.003824092vh 1.458333333vw;
-    font-size: 23px;
+    font-size: 2.198852772vh;
     background-color: #1f2121;
     color: white;
     border-right: #f8ac29 1px solid;
@@ -69,22 +69,21 @@ body {
 
 .banner {
     background-image: url(./banner.png);
-    height: 1080px;
+    height: 94.26386233vh;
     text-align: center;
     color: #f8ac29;
-    margin-bottom: 30px;
+    margin-bottom: 2.868vh;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
 }
 
 .banner h1 {
-    padding-top: 5%;
-    font-size: 350px;
+    font-size: 33.461vh;
 }
 
 .banner h3 {
-    font-size: 120px;
+    font-size: 11.472vh;
 }
 
 .info {
@@ -94,22 +93,22 @@ body {
 
 .info h1 {
     font-weight: bolder;
-    padding: 8px 0;
-    font-size: 36px;
+    padding: 0.417vw 0;
+    font-size: 3.442vh;
 }
 
 .info h2 {
-    padding: 20px 0;
+    padding: 1.042vw 0;
     display: inline-block;
 }
 
 .info p {
-    padding-bottom: 20px;
-    font-size: 20px;
+    padding-bottom: 1.912vh;
+    font-size: 1.912vh;
 }
 
 .info a {
-    font-size: 20px;
+    font-size: 1.912vh;
 }
 
 a {
@@ -124,7 +123,7 @@ a {
 }
 
 .content {
-    padding: 20px;
+    padding: 1.042vw 1.912vh;
 }
 
 .content h2 {
@@ -133,31 +132,31 @@ a {
 
 .chip {
     display: inline-block;
-    margin: 0 20px;
-    padding: 0 16px;
+    margin: 0 1.912vh;
+    padding: 0 1.53vh;
     background-color: #f8ac29;
     color: #1f2121;
     border-radius: 20px;
     text-decoration: none;
     float: right;
-    margin-top: 20px;
+    margin-top: 1.912vh;
 }
 
 .chip .fa {
-    padding-top: 8px;
-    padding-right: 8px;
+    padding-top: 0.765vh;
+    padding-right: 0.417vw;
 }
 
 .chip .fab {
-    padding-top: 8px;
-    padding-right: 8px;
+    padding-top: 0.765vh;
+    padding-right: 0.417vw;
 }
 
 footer {
-    margin-top: 8px;
+    margin-top: 0.765vh;
     background-color: #1f2121;
-    padding: 24px;
-    height: 335px;
+    padding: 1.25vw 2.294vh;
+    height: 32.027vh;
 }
 
 #sponsors {
@@ -168,7 +167,7 @@ footer {
 }
 
 #sponsors img {
-    height: 64px;
+    height: 6.119vh;
 }
 
 .full {
@@ -181,17 +180,17 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 50px 0;
+    padding: 2.604vw 0;
 }
 
 .footlink {
-    font-size: 25px;
+    font-size: 2.39vh;
     display: inline-block;
     width: 100%;
     text-align: center;
     color: white;
     text-decoration: none;
-    height: 20px
+    height: 1.912vh;
 }
 
 .footlink:hover {
@@ -201,26 +200,25 @@ footer {
 }
 
 #copyright {
-    padding-top: 10px;
+    padding-top: 0.956vh;
     width: 100%;
     margin: auto;
-    font-size: 20px;
+    font-size: 1.912vh;
     text-align: center;
 }
 
 .social-links {
-    padding-top: 25px;
+    padding-top: 2.39vh;
     text-align: center;
 }
 
 .social-links a {
-    padding-left: 8px;
-    padding-right: 8px;
+    padding: 0.417vw 0;
     display: inline-block;
 }
 
 ul {
-    padding-left: 40px;
+    padding-left: 2.083vw;
 }
 
 #heh {
@@ -243,9 +241,9 @@ ul {
     background-color: #f8ac29;
     color: white;
     border-radius: 100px;
-    padding: 5px 12%;
-    margin: 5px;
-    font-size: 30px;
+    padding: 0.26vw 12%;
+    margin: 0.26vw 0.478vh;
+    font-size: 2.868vh;
     font-family: "Dubai", "Comic Sans MS", "Arial Rounded MT Bold", sans-serif;
 }
 
