--- a/global/styling.css
+++ b/global/styling.css
@@ -45,6 +45,76 @@ body {
     color: #f8ac29;
 }
 
+.topnav .icon {
+    display: none;
+    color: white;
+    padding: 1.25rem;
+}
+
+@media screen and (max-width: 1000px) {
+    .topnav .icon {
+        display: block;
+    }
+
+    .links.link {
+        display: none;
+        flex-direction: column;
+        background-color: #1f2121;
+        position: absolute;
+        top: 3.75rem;
+        width: 100%;
+        z-index: 10;
+    }
+
+    .links .link:nth-child(-n+2) {
+        display: inline-block;
+    }
+
+    .links.show .link {
+        display: inline-block;
+    }
+
+    .links.show {
+        display: flex;
+    }
+
+    .link {
+        padding: 0.625rem;
+        text-align: left;
+        width: 100%;
+    }
+
+    .banner h1 {
+        font-size: 12vw;
+    }
+
+    .banner h3 {
+        font-size: 5vw;
+    }
+
+    .info {
+        width: 90%;
+    }
+
+    .article {
+        width: 100%;
+        margin-bottom: 1.25rem;
+    }
+
+    .footnav {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .social-links a img {
+        width: 32px;
+    }
+
+    #sponsors img {
+        height: 48px;
+    }
+}
+
 @keyframes selection {
     from {
         background-color: #1f2121;
@@ -53,12 +123,6 @@ body {
     to {
         color: #f8ac29;
     }
-}
-
-.topnav .icon {
-    display: none;
-    color: white;
-    padding: 1.25rem;
 }
 
 .topnav .icon:hover {
@@ -73,15 +137,20 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
 }
 
 .banner h1 {
     padding-top: 5%;
-    font-size: 21.875rem;
+    font-size: 18.22916667vw;
+    width: 99vw;
 }
 
 .banner h3 {
-    font-size: 8rem;
+    font-size: 6.6666666667vw;
+    width: 99vw;
 }
 
 .info {
@@ -254,4 +323,28 @@ ul {
 #plzwork2 {
     padding-bottom: 0;
     margin-bottom: 0;
+}
+
+@media screen and (max-width: 1000px) {
+    .topnav.link:not(:first-child) {
+        display: none;
+    }
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
+
+    .topnav.responsive {
+        position: relative;
+    }
+    .topnav.responsive a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
