--- a/about-us/styling.css
+++ b/about-us/styling.css
@@ -103,3 +103,23 @@ li {
     padding-bottom: 20px;
     font-size: 20px;
 }
+
+@media (max-width: 1000px) {
+    .first-line, .second-line {
+        flex-direction: column;
+        justify-content: center;
+        align-items: stretch;
+    }
+
+    .person {
+        display: block;
+        width: 90vw !important;
+        margin: 0 0 20px 0;
+        box-sizing: border-box;
+    }
+
+    .person img {
+        width: 100%;
+        height: auto;
+    }
+}
