--- a/our-journey/styling.css
+++ b/our-journey/styling.css
@@ -66,8 +66,7 @@
     border: 1px solid #f8ac29;
 }
   
-  /* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1000px) {
   /* Place the timelime to the left */
     .info::after {
         left: 31px;
@@ -96,5 +95,9 @@
   /* Make all right containers behave like the left ones */
     .right {
         left: 0%;
+    }
+
+    .link {
+      border: 0;
     }
 }
