--- a/global/styling.css
+++ b/global/styling.css
@@ -3,19 +3,6 @@
     padding: 0;
     border: 0;
     text-align: center;
-    overflow-x: hidden;
-}
-
-:root{
-    --bar-width: 60px;
-    --bar-height: 8px;
-    --hamburger-gap: 6px;
-    --foreground: #222;
-    --background: white;
-    --hamburger-margin: 1rem;
-    --hamburger-margin-right:3rem;
-    --animation-timing: 0.7s ease-in-out;
-    --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
 }
 
 body {
@@ -25,163 +12,41 @@ body {
     z-index: -1;
 }
 
-.desk_nav {
+.topnav {
     background-color: #1f2121;
     width: 100%;
+    height: auto;
+    overflow: hidden;
+    position: relative;
     z-index: 1000;
     text-align: left;
-    top: 0;
-    position: relative;
-    height: 3rem;
-    padding: 0.75rem 0;
-    justify-content: space-around;
-    align-items: center;
-    overflow: hidden;
-    display:flex;
 }
 
-
-.hamburger-nav{
-    background-color: #1f2121;
-    width: 100%;
-    z-index: 1000;
-    text-align: left;
-    top: 0;
-    position: relative;
-    height: 3rem;
-    padding: 0.75rem 0;
-    justify-content: space-around;
-    align-items: center;
-    overflow: hidden;
-    display:none;
-}
-
-@media screen and (max-width: 1100px) {
-    .desk_nav {
-      display: none;
-    }
-    .hamburger-nav {
-      display:flex;
-    }
-}
-
-.hamburger-menu {
-    --x-width: calc(var(--hamburger-height) * 1.41421356237);
-    display: flex;
-    flex-direction: column;
-    gap: var(--hamburger-gap);
-    width: max-content;
-    position: fixed;
-    top: var(--hamburger-margin);
-    right: var(--hamburger-margin-right);
-    z-index: 2001;
-    cursor: pointer;
-    overflow: hidden;
-}
-
-.hamburger-menu:has(input:checked) {
-    --foreground: white;
-}
-
-.hamburger-menu:has(input:focus-visible)::before,
-.hamburger-menu:has(input:focus-visible)::after,
-.hamburger-menu input:focus-visible {
-    border: 1px solid var(--background);
-    box-shadow: 0 0 0 1px var(--foreground);
-}
-
-.hamburger-menu::before,
-.hamburger-menu::after,
-.hamburger-menu input {
-    content: "";
-    width: var(--bar-width);
-    height: var(--bar-height);
-    background-color: white;
-    transition: background-color 0.5s ease;
-    border-radius: 9999px;
-    transform-origin: left center;
-    transition: opacity var(--animation-timing), width var(--animation-timing),
-        rotate var(--animation-timing), translate var(--animation-timing),
-        background-color var(--animation-timing);
-}
-
-.hamburger-menu input {
-    appearance: none;
-    padding: 0;
-    margin: 0;
-    outline: none;
-    pointer-events: none;
-}
-
-.hamburger-menu:has(input:checked)::before {
-    rotate: 45deg;
-    width: var(--x-width);
-    translate: 0 calc(var(--bar-height) / -2);
-}
-
-.hamburger-menu:has(input:checked)::after {
-    rotate: -45deg;
-    width: var(--x-width);
-    translate: 0 calc(var(--bar-height) / 2);
-}
-
-.hamburger-menu input:checked {
-    opacity: 0;
-    width: 0;
-}
-
-.sidebar {
-    transition: translate var(--animation-timing);
-    translate: 999px;
-    padding: 1rem 1rem 1rem 1rem;
-    top:4rem;
-    right:1rem;
-    background-color: var(--color-nav-dark);
-    color: var(--background);
-    transition: background-color 0.5s ease;
-    width:50%;
-    max-width: 15rem;
-    min-height: 5em;
-    position:fixed; 
-    display: inline-block;
-    z-index: 2000;
-    text-align: center;
-    font-size: 1.5rem;
-    color: white;
-    text-decoration: none;
-}
-
-.sidebar li{
-list-style: none;
-}
-.hamburger-menu:has(input:checked) + .sidebar {
-translate: 0;
-}
-
-.logo img{
-    left: 5%;
+.logo {
+    float: left;
     display: block;
-    height: 3.5rem;
-    width: 3.5rem;
+    height: 3.75rem;
+    width: 3.75rem;
 }
 
 .links {
-    text-align:center;
-    display:flex;
-    gap:1rem;
-    list-style: none;
+    text-align: left;
 }
 
 .link {
-    display: inline-flex;
+    display: inline-block;
     text-align: center;
     padding: 0 1.75rem;
-    font-size: 1.5rem;
+    font-size: 1.4375rem;
+    line-height: 2.5em;
     background-color: #1f2121;
     color: white;
+    border-right: #f8ac29 0.0625rem solid;
+    border-left: #f8ac29 0.0625rem solid;
     font-weight: bold;
     margin-left: -0.25rem;
     text-decoration: none;
+    height: 3.75rem;
 }
 
 .link:hover {
@@ -213,35 +78,35 @@ translate: 0;
 .banner {
     background-image: url(./banner.png);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: auto 100%;
     background-position: center;
     float: left;
     text-align: center;
     color: #f8ac29;
     margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
     width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
     z-index: 0;
+    text-shadow: 10px 0 0 #000, 0 -10px 0 #000, 0 10px 0 #000, -10px 0 0 #000;
 }
 
 .banner h1 {
-    font-size: 17vw;
+    font-size: 18.22916667vw;
     position: relative;
     width: 99vw;
     text-align: center;
-    border: 1px #1f2121 ;
-    text-shadow: 0px 0px 60px #1f2121, 0px 0px 50px #2b2927;
 }
-
 
 .banner h3 {
     font-size: 6.6666666667vw;
     width: 99vw;
-    text-shadow: 5px 5px 7px #1f2121;
 }
 
 .info {
@@ -253,13 +118,6 @@ translate: 0;
     font-weight: bolder;
     padding: 8px 0;
     font-size: 36px;
-}
-
-.info hr{
-    background: linear-gradient(90deg, hsla(39, 85%, 56%, 1) 0%, hsla(51, 86%, 58%, 1) 100%);
-    height:2px;
-    width: 100%;
-    margin-bottom: 1rem;
 }
 
 .info h2 {
@@ -281,11 +139,9 @@ a {
 }
 
 .article {
-    background-color: #f8ac29;
-    color:#1f2121;
-    border-radius: 30px;
-    width: 47%;
-    margin: 20px 9px;
+    border: #f8ac29 0.0625rem solid;
+    border-radius: 15px;
+    width: 49%;
     display: inline-block;
 }
 
@@ -305,6 +161,7 @@ a {
     color: #1f2121;
     border-radius: 1.25rem;
     text-decoration: none;
+    float: right;
     margin-top: 1.25rem;
 }
 
