--- a/global/styling.css
+++ b/global/styling.css
@@ -17,16 +17,27 @@ body {
     width: 100%;
     height: auto;
     overflow: hidden;
-    position: relative;
+    position: fixed;
     z-index: 1000;
     text-align: left;
+    display: flex;
+    justify-content: space-between;
+    transition: 0.4s;
+    padding: 30px 0;
 }
 
 .logo {
     float: left;
     display: block;
-    height: 3.75rem;
-    width: 3.75rem;
+    height: 2.75rem;
+    margin-left: 1%;
+    margin-top: 5px;
+}
+
+.logo img {
+    float: left;
+    display: block;
+    height: 2.75rem;
 }
 
 .links {
@@ -36,13 +47,10 @@ body {
 .link {
     display: inline-block;
     text-align: center;
-    padding: 0 1.75rem;
+    margin: 0 3.5rem;
     font-size: 1.4375rem;
     line-height: 2.5em;
-    background-color: #1f2121;
     color: white;
-    border-right: #f8ac29 0.0625rem solid;
-    border-left: #f8ac29 0.0625rem solid;
     font-weight: bold;
     margin-left: -0.25rem;
     text-decoration: none;
@@ -53,6 +61,23 @@ body {
     animation-name: selection;
     animation-duration: 0.5s;
     color: #f8ac29;
+}
+
+.link::after {
+    transition: all ease-in-out .2s;
+    background: none repeat scroll 0 0 #f5d53d;
+    content: "";
+    display: block;
+    height: 3px;
+    width: 0;
+}
+
+.link:hover::after {
+    width: 100%;
+}
+
+.links {
+    margin-right: 1.5%;
 }
 
 .topnav .icon {
@@ -94,7 +119,7 @@ body {
     align-items: center;
     position: relative;
     z-index: 0;
-    text-shadow: 10px 0 0 #000, 0 -10px 0 #000, 0 10px 0 #000, -10px 0 0 #000;
+    text-shadow: 10px 10px 20px #000;
 }
 
 .banner h1 {
@@ -155,14 +180,13 @@ a {
 
 .chip {
     display: inline-block;
-    margin: 0 1.25rem;
+    margin: 1.25rem;
     padding: 0 16px;
     background-color: #f8ac29;
     color: #1f2121;
     border-radius: 1.25rem;
     text-decoration: none;
-    float: right;
-    margin-top: 1.25rem;
+    margin-top: 0;
 }
 
 .chip .fa {
@@ -280,14 +304,18 @@ ul {
     margin-bottom: 0;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1200px) {
     .topnav {
         overflow: visible;
+        position: relative;
     }
     .topnav .icon {
         display: block;
     }
 
+    .links {
+        position: relative;
+    }
     .link {
         display: block;
         text-align: center;
@@ -299,6 +327,7 @@ ul {
     }
 
     .banner h1 {
+        margin-top: 40%;
         font-size: 25vw;
     }
 
@@ -347,6 +376,10 @@ ul {
         margin: 0;
         width: 80%;
         margin-bottom: 3vh;
+    }
+
+    .tik.chip {
+        display: none;
     }
 
     .link {
