--- a/our-journey/styling.css
+++ b/our-journey/styling.css
@@ -6,6 +6,7 @@
     position: relative !important;
     max-width: 1200px;
     margin: 0 auto;
+    height: auto;
 }
   
 .info::after {
@@ -18,6 +19,7 @@
     bottom: 0;
     left: 50%;
     margin-left: -3px;
+    height: auto;
 }
   
 .container {
@@ -25,8 +27,10 @@
     position: relative;
     background-color: inherit;
     width: 50%;
+    height: auto;
 }
   
+/* circles */
 .container::after {
     content: '';
     position: absolute;
@@ -56,6 +60,7 @@
     left: -16px;
 }
   
+/* fine */
 .contained {
     margin-top: 50px;
     padding: 20px 30px;
@@ -63,6 +68,7 @@
     position: relative;
     border-radius: 15px;
     border: 1px solid #f8ac29;
+    height: auto;
 }
   
 @media screen and (max-width: 1200px) {
@@ -94,8 +100,4 @@
     .link {
         border: 0;
     }
-}
-
-.info {
-    position: relative;
 }
