--- a/our-journey/styling.css
+++ b/our-journey/styling.css
@@ -15,11 +15,12 @@
     position: absolute;
     width: 6px;
     background-color: #f8ac29;
-    top: 0;
+    top: 100vh;
     bottom: 0;
     left: 50%;
     margin-left: -3px;
     height: auto;
+    overflow: hidden;
 }
   
 .container {
@@ -28,6 +29,10 @@
     background-color: inherit;
     width: 50%;
     height: auto;
+}
+
+.contained {
+    overflow: hidden;
 }
   
 /* circles */
@@ -39,9 +44,15 @@
     right: -17px;
     background-color: #1f2121;
     border: 4px solid #f8ac29;
-    top: 15px;
     border-radius: 50%;
     z-index: 1;
+    overflow: hidden;
+    top: 50%; /* Centers the circles in each box */
+    transform: translateY(-50%);
+}
+
+.container:first-child::after {
+    top: 115vh; /* Centers the circles in each box */
 }
   
 .left {
